Fix zoom and drag functionality on google maps; still to be tested on mobile device

--- a/src/pages/NotFoundPage/NotFoundPage.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.scss
@@ -5,6 +5,7 @@
 @use "../../styles/partials/typography" as *;
 
 .not-found {
+    height: 97vh;
 
     &__content-container {
         margin: 0 auto;
